# BrawlSun

./: .gitignore  Cargo.toml
src/: main.rs
src/brawl_sun/: client.rs
src/client/: client.rs  mod.rs
src/model/: structs.rs
tests/: brawlers.rs  clubs.rs  players.rs
