[package]
name = "brawl_sun"
version = "0.3.0"
authors = ["Kyando <amehikoji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }